force-app/main/default/objects/ilms__Certification_Course__c/ilms__Certification_Course__c.object-meta.xml
<CustomObject>
    <label>Certification Course</label>
    <nameField>
        <displayFormat>CertGroup-{00000}</displayFormat>
        <label>Certification Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Course</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>