force-app/main/default/objects/ilms__Certification_Course__c/fields/ilms__Certification_Path__c.field-meta.xml
<CustomField>
    <fullName>ilms__Certification_Path__c</fullName>
    <label>Certification Path</label>
    <referenceTo>ilms__Certification_Path__c</referenceTo>
    <relationshipName>Certification_Course_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>