force-app/main/default/objects/ilms__Certification_Course__c/fields/ilms__Course__c.field-meta.xml
<CustomField>
    <fullName>ilms__Course__c</fullName>
    <label>Course</label>
    <referenceTo>ilms__Book__c</referenceTo>
    <relationshipName>Certification_Course_Groups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>