force-app/main/default/objects/ilms__Certification_Course__c/fields/ilms__Order__c.field-meta.xml
<CustomField>
    <fullName>ilms__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>